# ai-toolkit

./: README.md
ai-toolkit/learnings/: LEARNINGS.md  mistakes.md
ai-toolkit/setup/: README.md
ai-toolkit/skills/brag-doc-updater/: SKILL.md
ai-toolkit/system-prompts/: README.md
learnings/: patterns.md
pm-agent/: .env.example  .gitignore  README.md  pyproject.toml
pm-agent/agents/planner/: __init__.py  agent.py
pm-agent/agents/planner/prompts/: system_prompt.md
pm-agent/config/: logging.py  settings.py
pm-agent/monitoring/: __init__.py  cost_tracker.py
pm-agent/tests/: test_core.py
pm-agent/tools/: __init__.py  feedback_tools.py  jira_mock_data.py  jira_tools.py  local_state_tools.py
pm-agent/vault_template/pm-agent/: _index.md
pm-agent/vault_template/pm-agent/feedback/: corrections.md  preferences.md
prompts/: README.md
skills/leadership-report/: SKILL.md
